--- a/source/dialogs/confirm/confirm-modal.html
+++ b/source/dialogs/confirm/confirm-modal.html
@@ -2,14 +2,15 @@
 	<div class='modal-dialog modal-sm'>
 		<div class="modal-content">
 			<div class="modal-header">
-				<button type="button" class="close" ng-click="wiModal.close('Cancel')" aria-hidden="true">&times;</button>
-				<h4>{{wiModal.title}}</h4>
+				<button type="button" class="close" ng-click="wiModal.close(false)" aria-hidden="true">&times;</button>
+				<h4 style="color: blue">{{wiModal.title}}</h4>
 			</div>
 			<div class="modal-body text-center">
-				<span>{{wiModal.confirmMsg}}</span>
+				<span style="font-style: italic; color: #281D1B">{{wiModal.confirmMsg}}</span>
 			</div>
 			<div class="modal-footer">
-				<button class='btn btn-default' ng-click='wiModal.close(true)'>Ok</button>
+				<button class='btn btn-primary' ng-click='wiModal.close(true)'
+						style="color: #000">Ok</button>
 				<button class='btn btn-default' ng-click='wiModal.close(false)'>Cancel</button>
 			</div>
 		</div>
