update marker properties

--- a/source/dialogs/marker-properties/marker-properties-modal.html
+++ b/source/dialogs/marker-properties/marker-properties-modal.html
@@ -98,14 +98,13 @@
                                         </div>
                                         <div class="col-sm-6">
                                             <div class="form-group">
-                                                <label class="control-label col-sm-4 small-text"></label>
-                                                <div class="col-sm-8 text-right">
-                                                    <button type="button" ng-click="wiModal.onSymbolStyleButtonClicked()" class="btn btn-default" ng-disabled="!wiModal.showSymbol">Style</button>
+                                                <div class="col-sm-12">
+                                                    <button type="button" ng-click="wiModal.onSymbolStyleButtonClicked()" ng-disabled="!wiModal.showSymbol" class="btn btn-block btn-default">Symbol Style</button>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="form-group">
+                                    <!-- <div class="form-group">
                                         <label class="control-label col-sm-4 normal-text" for="symbolSize">Symbol Size</label>
                                         <div class="col-sm-8">
                                             <input type="number" class="form-control wi-form-control" id="symbolSize" ng-model="wiModal.symbolSize" ng-disabled="!wiModal.showSymbol">
@@ -115,11 +114,11 @@
                                         <label for="symbolType" class="control-label col-sm-4 normal-text">Symbol Type</label>
                                         <div class="col-sm-8">
                                             <select ng-model="wiModal.symbolType" class="form-control wi-form-control" id="symbolType" ng-disabled="!wiModal.showSymbol">
-                                        <option value="circle">Circle</option>
-                                        <option value="square">Square</option>
-                                    </select>
+                                                <option value="circle">Circle</option>
+                                                <option value="square">Square</option>
+                                            </select>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
