--- a/source/dialogs/zone-manager/zone-manager-modal.html
+++ b/source/dialogs/zone-manager/zone-manager-modal.html
@@ -81,7 +81,7 @@
                                         </thead>
                                         <tbody>
                                             <tr ng-repeat="zone in wiModal.zoneArr"
-                                                ng-class="{selected:$index == selectedRow}"
+                                                ng-class="{selected:$index == wiModal.SelectedZone}"
                                                 ng-click="wiModal.setClickedRow($index)">
                                                 <td>{{$index+1}}</td>
                                                 <td>
@@ -101,13 +101,13 @@
                                                 </td>
                                                 <td>
                                                     <button ng-click="wiModal.foregroundZone($index);"
-                                                            ng-style="{'background-color':zone.properties.foreground}"
+                                                            ng-style="{'background-color':zone.properties.fill.pattern.foreground}"
                                                             class="form-control wi-form-control width-80px height-20px thick-border">
                                                     </button>
                                                 </td>
                                                 <td>
                                                     <button ng-click="wiModal.backgroundZone($index);"
-                                                            ng-style="{'background-color':zone.properties.background}"
+                                                            ng-style="{'background-color':zone.properties.fill.pattern.background}"
                                                             class="form-control wi-form-control width-80px height-20px thick-border">
                                                     </button>
                                                 </td>
@@ -118,15 +118,15 @@
                                                             <wi-canvas-rect name="row_{{$index}}" 
                                                                             pattern="{{zone.properties.fill.pattern.name}}" 
                                                                             width="40" height="20" 
-                                                                            foreground="{{zone.properties.foreground}}" 
-                                                                            background='{{zone.properties.background}}'>
+                                                                            foreground="{{zone.properties.fill.pattern.foreground}}" 
+                                                                            background='{{zone.properties.fill.pattern.background}}'>
                                                             </wi-canvas-rect>
                                                         </ui-select-match>
                                                         <ui-select-choices repeat="selectedPattern in wiModal.selectPatterns">
                                                             <wi-canvas-rect name="{{selectedPattern}}" pattern="{{selectedPattern}}" 
                                                                             width="40" height="20" 
-                                                                            foreground="{{zone.properties.foreground}}" 
-                                                                            background="{{zone.properties.background}}">
+                                                                            foreground="{{zone.properties.fill.pattern.foreground}}" 
+                                                                            background="{{zone.properties.fill.pattern.background}}">
                                                             </wi-canvas-rect>
                                                         </ui-select-choices>
                                                     </ui-select>
@@ -137,24 +137,23 @@
                                 </div>
                                 <div class='col-sm-3 col-xs-12' style='position:relative;'>
                                     <div>
-                                        <button class="btn btn-default display-block width-100-percent text-ellipsis" style="margin-bottom:5px;">Browse</button>
-                                        <button class="btn btn-default display-block width-100-percent text-ellipsis" style="margin-bottom:5px;">Paste</button>
+                                        <button class="btn btn-default display-block width-100-percent text-ellipsis" style="margin-bottom:5px;">Import</button>
                                         <button class="btn btn-default display-block width-100-percent text-ellipsis" style="margin-bottom:5px;">Export</button>
                                     </div>
                                     <div style='margin-top:5em;'>
-                                        <button class="btn btn-default display-block width-100-percent text-ellipsis" style="margin-bottom:5px;">
+                                        <button class="btn btn-default display-block width-100-percent text-ellipsis" style="margin-bottom:5px;" ng-click="wiModal.onAddAboveButtonClicked()">
                                             <i class="plus-16x16"></i>
                                             <span>Add Row Above</span>
                                         </button>
-                                        <button class="btn btn-default display-block width-100-percent text-ellipsis" style="margin-bottom:5px;">
+                                        <button class="btn btn-default display-block width-100-percent text-ellipsis" style="margin-bottom:5px;" ng-click="wiModal.onAddBelowButtonClicked()">
                                             <i class="plus-16x16"></i>                                                    
                                             <span>Add Row Below</span>
                                         </button>
-                                        <button class="btn btn-default display-block width-100-percent text-ellipsis" style="margin-bottom:5px;">
+                                        <button class="btn btn-default display-block width-100-percent text-ellipsis" style="margin-bottom:5px;" ng-click="wiModal.onDeleteButtonClicked()">
                                             <i class="delete-16x16"></i>                                                    
                                             <span>Delete Rows</span>
                                         </button>
-                                        <button class="btn btn-default display-block width-100-percent text-ellipsis" style="margin-bottom:5px;">
+                                        <button class="btn btn-default display-block width-100-percent text-ellipsis" style="margin-bottom:5px;" ng-click="wiModal.onClearAllButtonClicked()">
                                             <i class="delete-16x16"></i>
                                             <span>Clear All</span>
                                         </button>
