--- a/source/dialogs/curve-properties/curve-properties-modal.html
+++ b/source/dialogs/curve-properties/curve-properties-modal.html
@@ -23,15 +23,15 @@
                             <div class="col-sm-6">
                                 <h5 class="normal-text">Header</h5>
                                 <div class="form-group">
-                                    <label class="control-label col-sm-3 padding-left-2em" for="curveName"><span class=""></span>Name</label>
-                                    <div class="col-sm-9">
+                                    <label class="control-label col-sm-5 padding-left-2em" for="curveName"><span class=""></span>Name</label>
+                                    <div class="col-sm-7">
                                         <input type="text" class="form-control wi-form-control"
                                                 value="" id="curveName" name="curveName" ng-model="wiModal.lineObjTemplate.name" disabled>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="control-label col-sm-3 padding-left-2em" for="alias"><span class=""></span>Alias</label>
-                                    <div class="col-sm-9">
+                                    <label class="control-label col-sm-5 padding-left-2em" for="alias"><span class=""></span>Display Name</label>
+                                    <div class="col-sm-7">
                                         <input type="text" class="form-control wi-form-control"
                                                 value="" id="alias" name="alias"
                                                 ng-model="wiModal.curveOptions.alias">
